manifests/gateway/gateway.class.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gatewayclass-local
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
